# ILLIXR

./: .gitignore
include/illixr/: data_format.hpp  opencv_data_types.hpp
plugins/: plugins.yaml
plugins/compute_offload/: CMakeLists.txt  bridge.h  mmio.h  offload_protocol.h  plugin.cpp  rose_port.h  test.c
plugins/debugview/: plugin.cpp
plugins/gaze_inference/: CMakeLists.txt  best_model_bs1.onnx  image_classifier.cpp  image_classifier.h  plugin.cpp
plugins/image_decoder/: CMakeLists.txt  decoder.cpp  plugin.cpp
plugins/offline_cam/: data_loading.hpp
plugins/offline_eye/: CMakeLists.txt  data_loading.hpp  plugin.cpp
profiles/: offload.yaml
src/: runtime_impl.cpp
